<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

<!--  TODO: Here is the menu layout  -->
    <item android:title="@string/tab_text_1">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/nav_fragment1"
                        android:title="@string/nav_text_1" />
                <item
                        android:id="@+id/nav_fragment2"
                        android:title="@string/nav_text_2" />
            </group>
        </menu>
    </item>

    <item android:title="@string/tab_text_2">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/nav_fragment3"
                        android:title="@string/nav_text_3" />
            </group>
        </menu>
    </item>


    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_fragment4"
                android:title="@string/nav_text_4" />
    </group>


</menu>
