<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
        app:startDestination="@+id/nav_fragment1">

<!--  TODO: Every page got its own fragment,
            Make sure u set ur starting fragment as startDestination-->

    <fragment
            android:id="@+id/nav_fragment4"
            android:name="com.example.newpcbuilder.ui.Fragment4.Fragment4"
            android:label="@string/nav_text_4"
            tools:layout="@layout/four_fragment" />

    <fragment
            android:id="@+id/nav_fragment1"
            android:name="com.example.newpcbuilder.ui.Fragment1.Fragment1"
            android:label="@string/nav_text_1"
            tools:layout="@layout/one_fragment"/>
    
    <fragment
            android:id="@+id/nav_fragment2"
            android:name="com.example.newpcbuilder.ui.Fragment2.Fragment2"
            android:label="@string/nav_text_2"
            tools:layout="@layout/two_fragment"/>

    <fragment
            android:id="@+id/nav_fragment3"
            android:name="com.example.newpcbuilder.ui.Fragment3.Fragment3"
            android:label="@string/nav_text_3"
            tools:layout="@layout/three_fragment" />

</navigation>